prevent status labeling from wrapping

--- a/public/javascripts/SVLabel/css/svl-status.css
+++ b/public/javascripts/SVLabel/css/svl-status.css
@@ -34,6 +34,7 @@
 }
 
 .status-column-half {
+    white-space: nowrap;    
     padding: 5px 5px 5px 5px;
     margin: 5px 0 5px 0;
     width: 50%;
